# acts

./: CMakeLists.txt
Core/: CMakeLists.txt
Core/include/Acts/EventData/: Measurement.hpp  SingleFreeParameters.hpp  TrackStatePropMask.hpp
Core/include/Acts/Fitter/: GainMatrixUpdater.hpp  KalmanFitter.hpp
Core/include/Acts/Material/: Interactions.hpp
Core/include/Acts/Propagator/: DenseMaterialInteractor.hpp  EigenStepper.ipp  Propagator.hpp
Core/include/Acts/Utilities/: ParameterDefinitions.hpp
Core/src/Material/: Interactions.cpp
Core/src/Propagator/: CMakeLists.txt  DenseMaterialInteractor.cpp
Examples/Algorithms/Digitization/src/: HitSmearing.cpp
Examples/Algorithms/Fatras/: CMakeLists.txt
Examples/Algorithms/Fatras/src/: FatrasAlgorithm.cpp  FatrasAlgorithmOptions.cpp
Examples/Algorithms/Fitting/src/: FittingAlgorithm.cpp
Examples/Algorithms/Geant4/src/: GdmlDetectorConstruction.cpp
Examples/Algorithms/Geant4GeoModel/src/: GdmlDetectorConstruction.cpp
Examples/Algorithms/Geant4HepMC/src/: EventAction.cpp  EventRecording.cpp  PrimaryGeneratorAction.cpp  (+1 more)
Examples/Io/HepMC3/: CMakeLists.txt
Examples/Run/Fatras/: CMakeLists.txt
Examples/Run/Fatras/DD4hep/: CMakeLists.txt  DD4hepFatrasExample2.cpp
Examples/Run/Fatras/GeoModel/: CMakeLists.txt  GeoModelFatrasExample.cpp
Examples/Run/Geant4/: GdmlGeantinoRecording.cpp
Examples/Run/HepMC3/: HepMC3HistogramExample.cpp
Fatras/src/Physics/: StandardInteractions.cpp
Tests/IntegrationTests/: CMakeLists.txt  PropagationTestBase.hpp  PropagationTestHelper.hpp  PropagationTests.cpp
(+30 files in other folders)
